@@ -2794,4 +2794,8 @@ v3.activity.header.xweeksago=%1 Weeks Ago
 
 ConfigView.label.queue.stoponcebandwidthmet=Don't start any more torrents when upload/download speed limit is reached
 
+ConfigView.section.style.forceMozilla=Force Azureus to use Mozilla for Browser widgets [xulrunner or firefox 3 required; restart required]
+ConfigView.section.style.xulRunnerPath=Specify XulRunner / Firefox path manually [required for FF3; restart required]
+
+
 #PLEASE LEAVE ME AT VERY BOTTOM!
